[data] 버저닝별 전처리 함수 구현

--- a/preprocess/eda.ipynb
+++ b/preprocess/eda.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -43,20 +43,23 @@
      "output_type": "stream",
      "text": [
       "train dataset count: 9324\n",
-      "dev dataset count: 550\n"
+      "dev dataset count: 550\n",
+      "test dataset count: 1100\n"
      ]
     }
    ],
    "source": [
-    "train = pd.read_csv(\"./data/raw/train.csv\", encoding=\"UTF-8\")\n",
-    "dev = pd.read_csv(\"./data/raw/dev.csv\", encoding=\"UTF-8\")\n",
+    "train = pd.read_csv(\"../data/raw/train.csv\", encoding=\"UTF-8\")\n",
+    "dev = pd.read_csv(\"../data/raw/dev.csv\", encoding=\"UTF-8\")\n",
+    "test = pd.read_csv(\"../data/raw/test.csv\", encoding=\"UTF-8\")\n",
     "print(\"train dataset count:\", len(train))\n",
-    "print(\"dev dataset count:\", len(dev))"
+    "print(\"dev dataset count:\", len(dev))\n",
+    "print(\"test dataset count:\", len(test))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -161,7 +164,7 @@
        "4    0.0           0.0  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -390,6 +393,33 @@
    ],
    "source": [
     "train.groupby(\"source\")[\"id\"].count()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "source\n",
+       "nsmc-rtt            107\n",
+       "nsmc-sampled        261\n",
+       "petition-rtt        137\n",
+       "petition-sampled    256\n",
+       "slack-rtt           158\n",
+       "slack-sampled       181\n",
+       "Name: id, dtype: int64"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test.groupby(\"source\")[\"id\"].count()"
    ]
   },
   {
