[data] 증강 테스트

--- a/preprocess/data_preprocess.ipynb
+++ b/preprocess/data_preprocess.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -180,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -198,29 +198,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def make(df, df_name):\n",
-    "    df = replace_special_letters(df)\n",
-    "    df = spell_check(df)\n",
-    "    df = spacing_text(df)\n",
-    "    df = apply_eda(df)\n",
-    "    df = swap(df)\n",
-    "    df = df.drop_duplicates()\n",
-    "    df.to_csv(f\"../data/{df_name}.csv\")\n",
-    "    return df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "def make_v1(df, df_name):\n",
     "    df = replace_special_letters(df)\n",
+    "    df = spell_check(df)\n",
+    "    df = df.drop_duplicates()\n",
+    "    df.to_csv(f\"../data/{df_name}.csv\")\n",
+    "    return df\n",
+    "\n",
+    "\n",
+    "def make_v1_02(df, df_name):\n",
     "    df = spell_check(df)\n",
     "    df = df.drop_duplicates()\n",
     "    df.to_csv(f\"../data/{df_name}.csv\")\n",
@@ -245,6 +235,14 @@
     "    return df\n",
     "\n",
     "\n",
+    "def make_v2_03(df, df_name):\n",
+    "    df = spell_check(df)\n",
+    "    df = swap_over_one_label(df)\n",
+    "    df = df.drop_duplicates()\n",
+    "    df.to_csv(f\"../data/{df_name}.csv\")\n",
+    "    return df\n",
+    "\n",
+    "\n",
     "def make_v3(df, df_name):\n",
     "    df = replace_special_letters(df)\n",
     "    df = spell_check(df)\n",
@@ -257,76 +255,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "train = pd.read_csv(\"../data/raw/train.csv\", encoding=\"UTF-8\")\n",
-    "dev = pd.read_csv(\"../data/raw/dev.csv\", encoding=\"UTF-8\")\n",
-    "\n",
-    "train_v1 = make_v1(train, \"train_v1_01\")\n",
-    "dev_v1 = make_v1(dev, \"dev_v1_01\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 31,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "train_v2 = make_v2_02(train, \"train_v2_02\")\n",
-    "dev_v2 = make_v2_02(dev, \"dev_v2_02\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 33,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "train_v3 = make_v3(train, \"train_v3_01\")\n",
-    "dev_v3 = make_v3(dev, \"dev_v3_01\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "14871\n",
-      "label_int\n",
-      "0    3711\n",
-      "1    2736\n",
-      "2    2274\n",
-      "3    3430\n",
-      "4    2586\n",
-      "Name: id, dtype: int64\n",
-      "996\n",
-      "label_int\n",
-      "0     88\n",
-      "1    220\n",
-      "2    220\n",
-      "3    220\n",
-      "4    217\n",
-      "Name: id, dtype: int64\n"
+     "ename": "ParseError",
+     "evalue": "not well-formed (invalid token): line 1, column 14 (<string>)",
+     "output_type": "error",
+     "traceback": [
+      "Traceback \u001b[0;36m(most recent call last)\u001b[0m:\n",
+      "\u001b[0m  File \u001b[1;32m~/miniconda/envs/ame/lib/python3.11/site-packages/IPython/core/interactiveshell.py:3577\u001b[0m in \u001b[1;35mrun_code\u001b[0m\n    exec(code_obj, self.user_global_ns, self.user_ns)\u001b[0m\n",
+      "\u001b[0m  Cell \u001b[1;32mIn[10], line 4\u001b[0m\n    train_v1 = make_v1_02(train, \"train_v1_02\")\u001b[0m\n",
+      "\u001b[0m  Cell \u001b[1;32mIn[9], line 10\u001b[0m in \u001b[1;35mmake_v1_02\u001b[0m\n    df = spell_check(df)\u001b[0m\n",
+      "\u001b[0m  Cell \u001b[1;32mIn[4], line 9\u001b[0m in \u001b[1;35mspell_check\u001b[0m\n    df[\"sentence_1\"] = df.apply(lambda row: spell_checker.check(row[\"sentence_1\"]).checked, axis=1)\u001b[0m\n",
+      "\u001b[0m  File \u001b[1;32m~/miniconda/envs/ame/lib/python3.11/site-packages/pandas/core/frame.py:10374\u001b[0m in \u001b[1;35mapply\u001b[0m\n    return op.apply().__finalize__(self, method=\"apply\")\u001b[0m\n",
+      "\u001b[0m  File \u001b[1;32m~/miniconda/envs/ame/lib/python3.11/site-packages/pandas/core/apply.py:916\u001b[0m in \u001b[1;35mapply\u001b[0m\n    return self.apply_standard()\u001b[0m\n",
+      "\u001b[0m  File \u001b[1;32m~/miniconda/envs/ame/lib/python3.11/site-packages/pandas/core/apply.py:1063\u001b[0m in \u001b[1;35mapply_standard\u001b[0m\n    results, res_index = self.apply_series_generator()\u001b[0m\n",
+      "\u001b[0m  File \u001b[1;32m~/miniconda/envs/ame/lib/python3.11/site-packages/pandas/core/apply.py:1081\u001b[0m in \u001b[1;35mapply_series_generator\u001b[0m\n    results[i] = self.func(v, *self.args, **self.kwargs)\u001b[0m\n",
+      "\u001b[0m  Cell \u001b[1;32mIn[4], line 9\u001b[0m in \u001b[1;35m<lambda>\u001b[0m\n    df[\"sentence_1\"] = df.apply(lambda row: spell_checker.check(row[\"sentence_1\"]).checked, axis=1)\u001b[0m\n",
+      "\u001b[0m  File \u001b[1;32m~/DEV/git/level1-semantictextsimilarity-nlp-04/preprocess/hanspell/spell_checker.py:67\u001b[0m in \u001b[1;35mcheck\u001b[0m\n    \"checked\": _remove_tags(html),\u001b[0m\n",
+      "\u001b[0m  File \u001b[1;32m~/DEV/git/level1-semantictextsimilarity-nlp-04/preprocess/hanspell/spell_checker.py:27\u001b[0m in \u001b[1;35m_remove_tags\u001b[0m\n    result = \"\".join(ET.fromstring(text).itertext())\u001b[0m\n",
+      "\u001b[0;36m  File \u001b[0;32m~/miniconda/envs/ame/lib/python3.11/xml/etree/ElementTree.py:1350\u001b[0;36m in \u001b[0;35mXML\u001b[0;36m\n\u001b[0;31m    parser.feed(text)\u001b[0;36m\n",
+      "\u001b[0;36m  File \u001b[0;32m<string>\u001b[0;36m\u001b[0m\n\u001b[0;31mParseError\u001b[0m\u001b[0;31m:\u001b[0m not well-formed (invalid token): line 1, column 14\n"
      ]
     }
    ],
    "source": [
-    "print_label_count(train_v2)\n",
-    "print_label_count(dev_v2)"
+    "train = pd.read_csv(\"../data/raw/train.csv\", encoding=\"UTF-8\")\n",
+    "dev = pd.read_csv(\"../data/raw/dev.csv\", encoding=\"UTF-8\")\n",
+    "\n",
+    "train_v1 = make_v1_02(train, \"train_v1_02\")\n",
+    "dev_v1 = make_v1_02(dev, \"dev_v1_02\")\n",
+    "\n",
+    "print_label_count(train_v1)\n",
+    "print_label_count(dev_v1)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
