[data] 데이터 분포 밸런싱

--- a/preprocess/data_preprocess.ipynb
+++ b/preprocess/data_preprocess.ipynb
@@ -198,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -289,6 +289,17 @@
     "\n",
     "print_label_count(train_v1)\n",
     "print_label_count(dev_v1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ys_adverb_basic = pd.read_csv(\"../data/processed/ys_adverb_basic.csv\", encoding=\"UTF-8\")\n",
+    "ys_adverb_swap = swap_over_one_label(ys_adverb_basic)\n",
+    "ys_adverb_swap.to_csv(\"../data/ys_adverb_swap.csv\")"
    ]
   }
  ],
