[data] 데이터 균형, 불균형 실험

--- a/preprocess/data_preprocess.ipynb
+++ b/preprocess/data_preprocess.ipynb
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -198,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -250,36 +250,19 @@
     "    df = apply_eda(df, alpha_sr=0.3, alpha_ri=0.3, alpha_rs=0.3)\n",
     "    df = df.drop_duplicates()\n",
     "    df.to_csv(f\"../data/{df_name}.csv\")\n",
+    "    return df\n",
+    "\n",
+    "def make_swap(df,df_name):\n",
+    "    df = swap(df)\n",
+    "    df.to_csv(f\"./{df_name}.csv\")\n",
     "    return df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ParseError",
-     "evalue": "not well-formed (invalid token): line 1, column 14 (<string>)",
-     "output_type": "error",
-     "traceback": [
-      "Traceback \u001b[0;36m(most recent call last)\u001b[0m:\n",
-      "\u001b[0m  File \u001b[1;32m~/miniconda/envs/ame/lib/python3.11/site-packages/IPython/core/interactiveshell.py:3577\u001b[0m in \u001b[1;35mrun_code\u001b[0m\n    exec(code_obj, self.user_global_ns, self.user_ns)\u001b[0m\n",
-      "\u001b[0m  Cell \u001b[1;32mIn[10], line 4\u001b[0m\n    train_v1 = make_v1_02(train, \"train_v1_02\")\u001b[0m\n",
-      "\u001b[0m  Cell \u001b[1;32mIn[9], line 10\u001b[0m in \u001b[1;35mmake_v1_02\u001b[0m\n    df = spell_check(df)\u001b[0m\n",
-      "\u001b[0m  Cell \u001b[1;32mIn[4], line 9\u001b[0m in \u001b[1;35mspell_check\u001b[0m\n    df[\"sentence_1\"] = df.apply(lambda row: spell_checker.check(row[\"sentence_1\"]).checked, axis=1)\u001b[0m\n",
-      "\u001b[0m  File \u001b[1;32m~/miniconda/envs/ame/lib/python3.11/site-packages/pandas/core/frame.py:10374\u001b[0m in \u001b[1;35mapply\u001b[0m\n    return op.apply().__finalize__(self, method=\"apply\")\u001b[0m\n",
-      "\u001b[0m  File \u001b[1;32m~/miniconda/envs/ame/lib/python3.11/site-packages/pandas/core/apply.py:916\u001b[0m in \u001b[1;35mapply\u001b[0m\n    return self.apply_standard()\u001b[0m\n",
-      "\u001b[0m  File \u001b[1;32m~/miniconda/envs/ame/lib/python3.11/site-packages/pandas/core/apply.py:1063\u001b[0m in \u001b[1;35mapply_standard\u001b[0m\n    results, res_index = self.apply_series_generator()\u001b[0m\n",
-      "\u001b[0m  File \u001b[1;32m~/miniconda/envs/ame/lib/python3.11/site-packages/pandas/core/apply.py:1081\u001b[0m in \u001b[1;35mapply_series_generator\u001b[0m\n    results[i] = self.func(v, *self.args, **self.kwargs)\u001b[0m\n",
-      "\u001b[0m  Cell \u001b[1;32mIn[4], line 9\u001b[0m in \u001b[1;35m<lambda>\u001b[0m\n    df[\"sentence_1\"] = df.apply(lambda row: spell_checker.check(row[\"sentence_1\"]).checked, axis=1)\u001b[0m\n",
-      "\u001b[0m  File \u001b[1;32m~/DEV/git/level1-semantictextsimilarity-nlp-04/preprocess/hanspell/spell_checker.py:67\u001b[0m in \u001b[1;35mcheck\u001b[0m\n    \"checked\": _remove_tags(html),\u001b[0m\n",
-      "\u001b[0m  File \u001b[1;32m~/DEV/git/level1-semantictextsimilarity-nlp-04/preprocess/hanspell/spell_checker.py:27\u001b[0m in \u001b[1;35m_remove_tags\u001b[0m\n    result = \"\".join(ET.fromstring(text).itertext())\u001b[0m\n",
-      "\u001b[0;36m  File \u001b[0;32m~/miniconda/envs/ame/lib/python3.11/xml/etree/ElementTree.py:1350\u001b[0;36m in \u001b[0;35mXML\u001b[0;36m\n\u001b[0;31m    parser.feed(text)\u001b[0;36m\n",
-      "\u001b[0;36m  File \u001b[0;32m<string>\u001b[0;36m\u001b[0m\n\u001b[0;31mParseError\u001b[0m\u001b[0;31m:\u001b[0m not well-formed (invalid token): line 1, column 14\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "train = pd.read_csv(\"../data/raw/train.csv\", encoding=\"UTF-8\")\n",
     "dev = pd.read_csv(\"../data/raw/dev.csv\", encoding=\"UTF-8\")\n",
@@ -289,6 +272,16 @@
     "\n",
     "print_label_count(train_v1)\n",
     "print_label_count(dev_v1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train = pd.read_csv(\"../data/raw/train.csv\", encoding=\"UTF-8\")\n",
+    "train_swap = make_swap(train,\"ys_raw_swap\")"
    ]
   },
   {
