--- a/preprocess/data_preprocess.ipynb
+++ b/preprocess/data_preprocess.ipynb
@@ -180,6 +180,40 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from eda import eda\n",
+    "\n",
+    "\n",
+    "# 커스텀된 EDA 함수 말고 원본 패키지 사용하고 싶다면 https://github.com/toriving/KoEDA\n",
+    "def apply_eda(df, alpha_sr=0.1, alpha_ri=0.1, alpha_rs=0.1, num_aug=2):\n",
+    "    \"\"\"\n",
+    "    EDA 적용 함수 \\n\n",
+    "    주의: 한글 제외한 나머지 문자 제거됨 \\n\n",
+    "    alpha_sr: 특정 단어를 유의어로 교체할 확률 \\n\n",
+    "    alpha_ri: 임의의 단어를 삽입할 확률 \\n\n",
+    "    alpha_rs: 문장 내 임의의 두 단어의 위치를 바꿀 확률 \\n\n",
+    "    num_aug: 데이터 증강하는 개수 \\n\n",
+    "    \"\"\"\n",
+    "\n",
+    "    def _conditional_eda(row, column_name):\n",
+    "        if row[\"label\"] >= 0:\n",
+    "            return eda.EDA(row[column_name], alpha_sr, alpha_ri, alpha_rs, num_aug)\n",
+    "        else:\n",
+    "            return [row[column_name]]\n",
+    "\n",
+    "    df[\"sentence_1\"] = df.apply(lambda row: _conditional_eda(row, \"sentence_1\"), axis=1)\n",
+    "    df = df.explode(\"sentence_1\").reset_index(drop=True)\n",
+    "    df[\"sentence_2\"] = df.apply(lambda row: _conditional_eda(row, \"sentence_2\"), axis=1)\n",
+    "    df = df.explode(\"sentence_2\").reset_index(drop=True)\n",
+    "\n",
+    "    return df"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
    "outputs": [],
